[gd_scene load_steps=5 format=3 uid="uid://dfsg1hs0iccr6"]

[ext_resource type="Theme" uid="uid://boewen5utu4mk" path="res://assets/themes/default_theme.tres" id="1_ojsfm"]
[ext_resource type="Shader" path="res://assets/themes/pause_menu.gdshader" id="2_4ipig"]
[ext_resource type="Script" path="res://scripts/menu/pause_menu.gd" id="2_svy74"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_e06g6"]
shader = ExtResource("2_4ipig")
shader_parameter/amout = 1.5

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("2_svy74")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_e06g6")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 32.0
offset_top = 6.0
offset_right = 32.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme = ExtResource("1_ojsfm")

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -44.0
offset_right = 40.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "Pause
"
horizontal_alignment = 1

[node name="ButtonVBox" type="VBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="ResumeButton" type="Button" parent="Control/MarginContainer/VBoxContainer/ButtonVBox"]
layout_mode = 2
text = "Resume
"

[node name="BackButton" type="Button" parent="Control/MarginContainer/VBoxContainer/ButtonVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Back"

[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/ButtonVBox/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/ButtonVBox/BackButton" to="." method="_on_back_button_pressed"]
